resources/exemplos/Trabalho Luan Compiladores 2017/Trabalho 2 - Analisador Sintático X+++/Compilador.java
/* Compilador.java */
/* Generated By:JavaCC: Do not edit this line. Compilador.java */
        import java.io.*;
        public class Compilador implements CompiladorConstants {
                final static String Version = "Compilador X+++ - 1.0 - 2017.2";
                int contParseError = 0; // contador de erros

                public static void main( String[] args ) throws ParseException {
                        boolean debug = false;
                        String filename = "";
                        Compilador parser;
                        int i;
                        boolean ms = false;
                        System.out.println(Version);

                        for (i = 0; i < args.length - 1; i++){
                                if (args[i].equals("-debug_AS"))
                                        debug = true;
                                else {
                                        System.out.println("Use: java langX [-short] file");
                                        System.exit(0);
                                }
                        }

                        if (args[i].equals("-")){       // lê da entrada padrão      
                                System.out.println("Lendo da entrada padrao . . .");
                                parser = new Compilador(System.in);
                        } else {       // lê do file
                                filename = args[args.length-1];
                                System.out.println("Lendo do file " + filename + " . . .");
                                try {
                                        parser = new Compilador(new java.io.FileInputStream(filename));
                                } catch (java.io.FileNotFoundException e) {
                                        System.out.println("File " + filename + " not found.");
                                        return;
                                }
                        }

                        if (!debug) parser.disable_tracing(); // desabilita verbose do AS
                        try {
                                parser.program();   // chama o método que faz a análise
                        } catch (ParseException e){
                                System.err.println(e.getMessage());
                                parser.contParseError = 1;   // não existe recuperação de erros
                        } finally {
                                System.out.println(parser.token_source.foundLexError() + " erros lexicos encontrados");
                                System.out.println(parser.contParseError + " erros sintaticos encontrados");
                        }
                }

                static public String im(int x){
                        int k;
                        String s;
                        s = tokenImage[x];
                        k = s.lastIndexOf("\u005c"");
                        try {
                                s = s.substring(1,k);
                        } catch (StringIndexOutOfBoundsException e){

                        }
                return s;
        }

  final public void classbody() throws ParseException {
    trace_call("classbody");
    try {
      jj_consume_token(LBRACE);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        classlist();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      label_1:
      while (true) {
        if (jj_2_1(3)) {
          ;
        } else {
          break label_1;
        }
        vardecl();
        jj_consume_token(SEMICOLON);
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CONSTRUCTOR:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        constructdecl();
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case primitivetype:
        case IDENT:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        methoddecl();
      }
      jj_consume_token(RBRACE);
    } finally {
      trace_return("classbody");
    }
  }

  final public void program() throws ParseException {
    trace_call("program");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        classlist();
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(0);
    } finally {
      trace_return("program");
    }
  }

  final public void classlist() throws ParseException {
    trace_call("classlist");
    try {
      classdecl();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        classlist();
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
    } finally {
      trace_return("classlist");
    }
  }

  final public void classdecl() throws ParseException {
    trace_call("classdecl");
    try {
      jj_consume_token(CLASS);
      jj_consume_token(IDENT);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EXTENDS:{
        jj_consume_token(EXTENDS);
        jj_consume_token(IDENT);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      classbody();
    } finally {
      trace_return("classdecl");
    }
  }

  final public void vardecl() throws ParseException {
    trace_call("vardecl");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case primitivetype:{
        jj_consume_token(primitivetype);
        break;
        }
      case IDENT:{
        jj_consume_token(IDENT);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(IDENT);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACKET:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_4;
        }
        jj_consume_token(LBRACKET);
        jj_consume_token(RBRACKET);
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
        jj_consume_token(IDENT);
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LBRACKET:{
            ;
            break;
            }
          default:
            jj_la1[9] = jj_gen;
            break label_6;
          }
          jj_consume_token(LBRACKET);
          jj_consume_token(RBRACKET);
        }
      }
    } finally {
      trace_return("vardecl");
    }
  }

  final public void constructdecl() throws ParseException {
    trace_call("constructdecl");
    try {
      jj_consume_token(CONSTRUCTOR);
      methodbody();
    } finally {
      trace_return("constructdecl");
    }
  }

  final public void paramlist() throws ParseException {
    trace_call("paramlist");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case primitivetype:
      case IDENT:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case primitivetype:{
          jj_consume_token(primitivetype);
          break;
          }
        case IDENT:{
          jj_consume_token(IDENT);
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(IDENT);
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LBRACKET:{
            ;
            break;
            }
          default:
            jj_la1[11] = jj_gen;
            break label_7;
          }
          jj_consume_token(LBRACKET);
          jj_consume_token(RBRACKET);
        }
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[12] = jj_gen;
            break label_8;
          }
          jj_consume_token(COMMA);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case primitivetype:{
            jj_consume_token(primitivetype);
            break;
            }
          case IDENT:{
            jj_consume_token(IDENT);
            break;
            }
          default:
            jj_la1[13] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          jj_consume_token(IDENT);
          label_9:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case LBRACKET:{
              ;
              break;
              }
            default:
              jj_la1[14] = jj_gen;
              break label_9;
            }
            jj_consume_token(LBRACKET);
            jj_consume_token(RBRACKET);
          }
        }
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        ;
      }
    } finally {
      trace_return("paramlist");
    }
  }

  final public void methoddecl() throws ParseException {
    trace_call("methoddecl");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case primitivetype:{
        jj_consume_token(primitivetype);
        break;
        }
      case IDENT:{
        jj_consume_token(IDENT);
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACKET:{
          ;
          break;
          }
        default:
          jj_la1[17] = jj_gen;
          break label_10;
        }
        jj_consume_token(LBRACKET);
        jj_consume_token(RBRACKET);
      }
      jj_consume_token(IDENT);
      methodbody();
    } finally {
      trace_return("methoddecl");
    }
  }

  final public void methodbody() throws ParseException {
    trace_call("methodbody");
    try {
      jj_consume_token(LPAREN);
      paramlist();
      jj_consume_token(RPAREN);
      statement();
    } finally {
      trace_return("methodbody");
    }
  }

  final public void statement() throws ParseException {
    trace_call("statement");
    try {
      if (jj_2_2(2)) {
        vardecl();
        jj_consume_token(SEMICOLON);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENT:{
          atribStat();
          jj_consume_token(SEMICOLON);
          break;
          }
        case PRINT:{
          printStat();
          jj_consume_token(SEMICOLON);
          break;
          }
        case READ:{
          readStat();
          jj_consume_token(SEMICOLON);
          break;
          }
        case RETURN:{
          returnStat();
          jj_consume_token(SEMICOLON);
          break;
          }
        case SUPER:{
          superStat();
          jj_consume_token(SEMICOLON);
          break;
          }
        case IF:{
          ifStat();
          break;
          }
        case FOR:{
          forStat();
          break;
          }
        case WHILE:{
          whileStat();
          break;
          }
        case DO:{
          doWhileStat();
          jj_consume_token(SEMICOLON);
          break;
          }
        case SWITCH:{
          switchStat();
          break;
          }
        case LBRACE:{
          jj_consume_token(LBRACE);
          statlist();
          jj_consume_token(RBRACE);
          break;
          }
        case BREAK:{
          jj_consume_token(BREAK);
          jj_consume_token(SEMICOLON);
          break;
          }
        case SEMICOLON:{
          jj_consume_token(SEMICOLON);
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("statement");
    }
  }

  final public void atribStat() throws ParseException {
    trace_call("atribStat");
    try {
      lvalue();
      jj_consume_token(ASSIGN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NEW:{
        alocexpression();
        break;
        }
      case int_constant:
      case stringLiteral:
      case string_constant:
      case null_constant:
      case intLiteral:
      case IDENT:
      case LPAREN:
      case PLUS:
      case MINUS:{
        expression();
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("atribStat");
    }
  }

  final public void printStat() throws ParseException {
    trace_call("printStat");
    try {
      jj_consume_token(PRINT);
      expression();
    } finally {
      trace_return("printStat");
    }
  }

  final public void readStat() throws ParseException {
    trace_call("readStat");
    try {
      jj_consume_token(READ);
      lvalue();
    } finally {
      trace_return("readStat");
    }
  }

  final public void returnStat() throws ParseException {
    trace_call("returnStat");
    try {
      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case int_constant:
      case stringLiteral:
      case string_constant:
      case null_constant:
      case intLiteral:
      case IDENT:
      case LPAREN:
      case PLUS:
      case MINUS:{
        expression();
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        ;
      }
    } finally {
      trace_return("returnStat");
    }
  }

  final public void doWhileStat() throws ParseException {
    trace_call("doWhileStat");
    try {
      jj_consume_token(DO);
      statement();
      jj_consume_token(LPAREN);
      expression();
      jj_consume_token(RPAREN);
    } finally {
      trace_return("doWhileStat");
    }
  }

  final public void superStat() throws ParseException {
    trace_call("superStat");
    try {
      jj_consume_token(SUPER);
      jj_consume_token(LPAREN);
      arglist();
      jj_consume_token(RPAREN);
    } finally {
      trace_return("superStat");
    }
  }

  final public void ifStat() throws ParseException {
    trace_call("ifStat");
    try {
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      expression();
      jj_consume_token(RPAREN);
      statement();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:{
        jj_consume_token(ELSE);
        statement();
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        ;
      }
    } finally {
      trace_return("ifStat");
    }
  }

  final public void forStat() throws ParseException {
    trace_call("forStat");
    try {
      jj_consume_token(FOR);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENT:{
        atribStat();
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case int_constant:
      case stringLiteral:
      case string_constant:
      case null_constant:
      case intLiteral:
      case IDENT:
      case LPAREN:
      case PLUS:
      case MINUS:{
        expression();
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENT:{
        atribStat();
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
      statement();
    } finally {
      trace_return("forStat");
    }
  }

  final public void whileStat() throws ParseException {
    trace_call("whileStat");
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      expression();
      jj_consume_token(RPAREN);
      statement();
    } finally {
      trace_return("whileStat");
    }
  }

  final public void switchStat() throws ParseException {
    trace_call("switchStat");
    try {
      jj_consume_token(SWITCH);
      jj_consume_token(LPAREN);
      jj_consume_token(IDENT);
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CASE:
      case DFAULT:{
        switchCasesStat();
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        ;
      }
      jj_consume_token(RBRACE);
    } finally {
      trace_return("switchStat");
    }
  }

  final public void switchCasesStat() throws ParseException {
    trace_call("switchCasesStat");
    try {
      switchCaseStat();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CASE:
      case DFAULT:{
        switchCasesStat();
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        ;
      }
    } finally {
      trace_return("switchCasesStat");
    }
  }

  final public void alocexpression() throws ParseException {
    trace_call("alocexpression");
    try {
      jj_consume_token(NEW);
      if (jj_2_3(2)) {
        jj_consume_token(IDENT);
        jj_consume_token(LPAREN);
        arglist();
        jj_consume_token(RPAREN);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case primitivetype:
        case IDENT:{
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case primitivetype:{
            jj_consume_token(primitivetype);
            break;
            }
          case IDENT:{
            jj_consume_token(IDENT);
            break;
            }
          default:
            jj_la1[27] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          label_11:
          while (true) {
            jj_consume_token(LBRACKET);
            expression();
            jj_consume_token(RBRACKET);
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case LBRACKET:{
              ;
              break;
              }
            default:
              jj_la1[28] = jj_gen;
              break label_11;
            }
          }
          break;
          }
        default:
          jj_la1[29] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("alocexpression");
    }
  }

  final public void switchCaseStat() throws ParseException {
    trace_call("switchCaseStat");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CASE:{
        jj_consume_token(CASE);
        factor();
        break;
        }
      case DFAULT:{
        jj_consume_token(DFAULT);
        break;
        }
      default:
        jj_la1[30] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(COLON);
      statement();
    } finally {
      trace_return("switchCaseStat");
    }
  }

  final public void statlist() throws ParseException {
    trace_call("statlist");
    try {
      statement();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BREAK:
      case IF:
      case PRINT:
      case READ:
      case DO:
      case FOR:
      case RETURN:
      case SUPER:
      case SWITCH:
      case WHILE:
      case primitivetype:
      case IDENT:
      case LBRACE:
      case SEMICOLON:{
        statlist();
        break;
        }
      default:
        jj_la1[31] = jj_gen;
        ;
      }
    } finally {
      trace_return("statlist");
    }
  }

  final public void lvalue() throws ParseException {
    trace_call("lvalue");
    try {
      jj_consume_token(IDENT);
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACKET:
        case DOT:{
          ;
          break;
          }
        default:
          jj_la1[32] = jj_gen;
          break label_12;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRACKET:{
          jj_consume_token(LBRACKET);
          expression();
          jj_consume_token(RBRACKET);
          break;
          }
        case DOT:{
          jj_consume_token(DOT);
          jj_consume_token(IDENT);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LPAREN:{
            jj_consume_token(LPAREN);
            arglist();
            jj_consume_token(RPAREN);
            break;
            }
          default:
            jj_la1[33] = jj_gen;
            ;
          }
          break;
          }
        default:
          jj_la1[34] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("lvalue");
    }
  }

  final public void factor() throws ParseException {
    trace_call("factor");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case int_constant:{
        jj_consume_token(int_constant);
        break;
        }
      case intLiteral:{
        jj_consume_token(intLiteral);
        break;
        }
      case string_constant:{
        jj_consume_token(string_constant);
        break;
        }
      case stringLiteral:{
        jj_consume_token(stringLiteral);
        break;
        }
      case null_constant:{
        jj_consume_token(null_constant);
        break;
        }
      case IDENT:{
        lvalue();
        break;
        }
      case LPAREN:{
        jj_consume_token(LPAREN);
        expression();
        jj_consume_token(RPAREN);
        break;
        }
      default:
        jj_la1[35] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("factor");
    }
  }

  final public void arglist() throws ParseException {
    trace_call("arglist");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case int_constant:
      case stringLiteral:
      case string_constant:
      case null_constant:
      case intLiteral:
      case IDENT:
      case LPAREN:
      case PLUS:
      case MINUS:{
        expression();
        label_13:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[36] = jj_gen;
            break label_13;
          }
          jj_consume_token(COMMA);
          expression();
        }
        break;
        }
      default:
        jj_la1[37] = jj_gen;
        ;
      }
    } finally {
      trace_return("arglist");
    }
  }

  final public void expression() throws ParseException {
    trace_call("expression");
    try {
      numexpr();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case GT:
      case LT:
      case LE:
      case GE:
      case EQ:
      case NEQ:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LT:{
          jj_consume_token(LT);
          break;
          }
        case GT:{
          jj_consume_token(GT);
          break;
          }
        case LE:{
          jj_consume_token(LE);
          break;
          }
        case GE:{
          jj_consume_token(GE);
          break;
          }
        case EQ:{
          jj_consume_token(EQ);
          break;
          }
        case NEQ:{
          jj_consume_token(NEQ);
          break;
          }
        default:
          jj_la1[38] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        numexpr();
        break;
        }
      default:
        jj_la1[39] = jj_gen;
        ;
      }
    } finally {
      trace_return("expression");
    }
  }
